remove city name text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h2 class="temp"></h2>
           <p>°C</p>
         </div>
-        <h3 class="city">Berlin</h3>
+        <h3 class="city"></h3>
         <div class="weather-details">
           <div class="col">
             <img src="./imgs/humidity.jpg" alt="humidity icon" />
