adding error msg

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <input type="text" placeholder="Enter City Name" spellcheck="false" />
         <button><img src="/imgs/search-icon.png" alt="search icon" /></button>
       </div>
+      <div class="error">
+        <p>Please, chek the city name!</p>
+      </div>
       <div class="weather">
-        <img src="./imgs/rain.jpg" alt="rain image" class="weather-icon" />
+        <img src="" class="weather-icon" />
         <div class="temp-container">
           <h2 class="temp"></h2>
           <p>°C</p>
@@ -25,20 +28,19 @@
             <img src="./imgs/humidity.jpg" alt="humidity icon" />
             <div>
               <p>Humidity:</p>
-              <p><span class="humidity">62</span> %</p>
+              <p><span class="humidity"></span> %</p>
             </div>
           </div>
           <div class="col">
             <img src="./imgs/wind.jpg" alt="wind icon" />
             <div>
               <p>Wind speed:</p>
-              <p><span class="wind">12 </span> km/h</p>
+              <p><span class="wind"> </span> km/h</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
